# tap-openmeteo

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  config.commercial.sample.json  config.historical.sample.json  config.sample.json  dump.yaml  meltano.yml  pyproject.toml  taskfile.yaml
.github/workflows/: test.yml
tap_openmeteo/: __init__.py  __main__.py  client.py  streams.py  tap.py
tap_openmeteo/schemas/: __init__.py
tests/: test_core.py  test_url_params.py
