[project]
name = "tap-openmeteo"
version = "0.1.0"
description = "Singer tap for OpenMeteo weather API, built with the Meltano Singer SDK."
readme = "README.md"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
keywords = [
    "ELT",
    "OpenMeteo",
    "Weather",
    "Singer",
    "Meltano",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "singer-sdk~=0.53.0",
    "requests~=2.32.0",
    "typing-extensions>=4.5.0; python_version < '3.12'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "singer-sdk[testing]",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "types-requests",
]

[project.scripts]
tap-openmeteo = "tap_openmeteo.tap:TapOpenMeteo.cli"

[build-system]
requires = ["hatchling>=1.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tap_openmeteo"]

[tool.pytest.ini_options]
addopts = [
    "--durations=10",
    "-ra",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "ARG", "ERA"]
ignore = [
    "D100",
    "D104",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "meltano>=4.1.2",
]
