[project]
name = "tap-openmeteo"
version = "0.2.0"
description = "Singer tap for OpenMeteo weather API, built with the Meltano Singer SDK."
readme = "README.md"
authors = [{ name = "Luca Capra", email = "luca.capra@spindox.it" }]
keywords = [
    "ELT",
    "OpenMeteo",
    "Weather",
    "Singer",
    "Meltano",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "singer-sdk~=0.53.0",
    "requests~=2.32.0",
    "typing-extensions>=4.5.0; python_version < '3.12'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "singer-sdk[testing]",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "types-requests",
]

[project.scripts]
tap-openmeteo = "tap_openmeteo.tap:TapOpenMeteo.cli"

[build-system]
requires = ["hatchling>=1.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tap_openmeteo"]

[tool.pytest.ini_options]
addopts = [
    "--durations=10",
    "-ra",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "ARG", "ERA"]
ignore = [
    "D100",
    "D104",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tox]
min_version = "4.22"
requires = [
    "tox>=4.22",
    "tox-uv",
]
env_list = [
    "typing",
    "py313",
    "py312",
    "py311",
    "py310",
]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
pass_env = [
    "TAP_OPENMETEO_*",
]
dependency_groups = ["test", "typing", "dev"]
commands = [["pytest", { replace = "posargs", default = ["tests"], extend = true }]]

[tool.tox.env.typing]
dependency_groups = ["test", "typing", "dev"]
commands = [
    ["mypy", { replace = "posargs", default = ["tap_openmeteo", "tests"], extend = true }],
]

[dependency-groups]
typing = [
    "mypy>=1.0",
    "types-requests",
]
test = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "singer-sdk[testing]",
]
dev = [
    "meltano>=4.1.2",
    "python-semantic-release>=9.21.1",
    "ruff>=0.1.0",
]


[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]

build_command = """
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
    uv build
"""

branch = "main"
changelog_file = "CHANGELOG.md"
tag_format = "v{version}"
commit_parser = "conventional"

upload_to_release = false
upload_to_pypi = false
commit_version_number = false

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "up"]
parse_squash_commits = true
ignore_merge_commits = true

